--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.6.3",
-    "tslib": "2.0.3",
-    "zone.js": "0.10.3",
-    "jasmine-core": "3.6.0",
+    "@angular/animations": "11.0.2",
+    "@angular/common": "11.0.2",
+    "@angular/compiler": "11.0.2",
     "@angular/core": "11.0.2",
     "@angular/forms": "11.0.2",
-    "@angular/common": "11.0.2",
-    "@angular/router": "11.0.2",
-    "jasmine-marbles": "0.6.0",
-    "@angular/compiler": "11.0.2",
-    "@angular/animations": "11.0.2",
     "@angular/platform-browser": "11.0.2",
+    "@angular/platform-browser-dynamic": "11.0.2",
+    "@angular/router": "11.0.2",
     "angular-in-memory-web-api": "0.11.0",
-    "@angular/platform-browser-dynamic": "11.0.2"
+    "jasmine-core": "3.6.0",
+    "jasmine-marbles": "0.6.0",
+    "ngx-webstorage-service": "^4.1.0",
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "zone.js": "0.10.3"
   },
   "scripts": {
     "ng": "ng",
